<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical" >
   	    
	<TextView
        android:id="@+id/eventTitleTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventTitleText" />

    <EditText
        android:id="@+id/eventEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/newEventHint" />
   	    
    <TextView
        android:id="@+id/eventDateTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDateText" />

    <Button
		android:id="@+id/eventDateButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/eventDateButtonText"
		android:gravity="center" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/deleteEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/deleteEventButtonText" />
        
    <Button
        android:id="@+id/eventSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/eventSaveButtonText" />
        
    </LinearLayout>
        
    </LinearLayout>
    

</ScrollView>
